# Super-Mario-Battle-Royale

./: .flake8  .gitignore  README.md
frontend/: .gitignore  eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/scripts/: copy-proto.js
frontend/src/: App.css  App.test.tsx  App.tsx  main.test.tsx
frontend/src/components/: GameCanvas.test.tsx  GameCanvas.tsx  Lobby.test.tsx  Lobby.tsx
frontend/src/components/Lobby/: Dashboard.css  Dashboard.test.tsx  Dashboard.tsx  LandingPage.css  LandingPage.test.tsx  LandingPage.tsx
frontend/src/game/: NetworkService.test.ts  NetworkService.ts  PhaserGame.test.ts  PhaserGame.ts
frontend/src/game/constants/: assets.test.ts  assets.ts
frontend/src/hooks/: index.ts  usePhaserGame.test.ts  usePhaserGame.ts
frontend/src/types/: index.ts
proto/game/: player.proto
server/: .flake8  integration_test.py  main.py  main_test.py  player_pb2.py  pyproject.toml  requirements.txt  websocket_fallback.py  websocket_fallback_test.py
tmp/: check_send.py
