[project]
name = "super-mario-battle-royale-server"
version = "0.1.0"
description = "Backend server for Super Mario Battle Royale"
dependencies = [
]

[tool.black]
line-length = 80
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["*_test.py", "test_*.py"]
addopts = "--cov=. --cov-report=term-missing"
